correct width for widgets on small-screen devices, no longer css-calc widths; Tested on Windows (FF8, Chrome 15), Built-in browsers of: Samsung Galaxy S2 (Gingerbread), Samsung Galaxy Tab 10.1 (Honeycomb), iPhone 3GS (iOS 5), Samsung Galaxy S (Gingerbread)

--- a/CometVisu/trunk/visu/designs/discreet_sand/mobile.css
+++ b/CometVisu/trunk/visu/designs/discreet_sand/mobile.css
@@ -1,6 +1,5 @@
-.widget
-{
-  width:98%;
+.widget_container {
+    width: 98%;
 }
 
 #bottom {
